# api-monitor

./: .env.example  Cargo.toml  sample_logs.jsonl
src/: db.rs  error.rs  log_parser.rs  main.rs  router_parser.rs  types.rs
src/ui/: mod.rs  route_detail.rs  route_list.rs  route_request.rs  ui_core.rs
