[package]
name = "api_benchmarker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
